sandc/test/fixtures/astRegression/shouldFail/localVariableDeclarations/DeclarationExpression.sand
pub class DeclarationExpression {
    foo() {
        x(let foo = 3;)
    }
}